--- a/src/basket-jam.html
+++ b/src/basket-jam.html
@@ -34,7 +34,7 @@
 
         .stat-display {
             background: rgba(0, 0, 0, 0.6);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 15px 25px;
             text-align: center;
         }
@@ -48,8 +48,8 @@
 
         .stat-display .value {
             font-size: 2em;
-            color: #00ff41;
-            text-shadow: 0 0 10px rgba(0, 255, 65, 0.5);
+            color: #7ec8e3;
+            text-shadow: 0 0 10px rgba(126, 200, 227, 0.5);
         }
 
         .game-area {
@@ -142,7 +142,7 @@
         .aim-line {
             position: absolute;
             width: 3px;
-            background: rgba(0, 255, 65, 0.6);
+            background: rgba(126, 200, 227, 0.6);
             transform-origin: bottom center;
             pointer-events: none;
             display: none;
@@ -155,14 +155,14 @@
             width: 20px;
             height: 150px;
             background: rgba(0, 0, 0, 0.6);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
         }
 
         .power-fill {
             position: absolute;
             bottom: 0;
             width: 100%;
-            background: linear-gradient(180deg, #ff0000 0%, #00ff41 100%);
+            background: linear-gradient(180deg, #ff0000 0%, #7ec8e3 100%);
             transition: height 0.1s;
         }
 
@@ -196,7 +196,7 @@
             top: 20px;
             right: 20px;
             background: rgba(255, 0, 0, 0.8);
-            color: #00ff41;
+            color: #7ec8e3;
             padding: 10px 15px;
             font-size: 0.9em;
             display: none;
