--- a/src/frogger.html
+++ b/src/frogger.html
@@ -23,16 +23,16 @@
             padding-bottom: 50px;
         }
         canvas {
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             background: #0a0a0a;
             max-width: 100%;
             height: auto;
             display: block;
-            box-shadow: 0 0 30px rgba(0, 255, 65, 0.4);
+            box-shadow: 0 0 30px rgba(126, 200, 227, 0.4);
         }
         .controls {
             text-align: center;
-            color: #00ff41;
+            color: #7ec8e3;
             margin-top: 10px;
         }
         .mobile-controls {
@@ -44,8 +44,8 @@
         }
         .mobile-btn {
             background: rgba(255, 0, 0, 0.7);
-            color: #00ff41;
-            border: 2px solid #00ff41;
+            color: #7ec8e3;
+            border: 2px solid #7ec8e3;
             padding: 15px;
             font-family: inherit;
             font-size: 20px;
