--- a/src/snaker.html
+++ b/src/snaker.html
@@ -18,8 +18,8 @@
         canvas {
             max-width: 100%;
             height: auto;
-            border: 3px solid #00ff41;
-            box-shadow: 0 0 30px rgba(0, 255, 65, 0.4);
+            border: 3px solid #7ec8e3;
+            box-shadow: 0 0 30px rgba(126, 200, 227, 0.4);
         }
         .control-btn {
             touch-action: manipulation;
@@ -382,7 +382,7 @@
                         segment.y * gridSize + gridSize / 2,
                         gridSize / 2
                     );
-                    gradient.addColorStop(0, '#00ff41');
+                    gradient.addColorStop(0, '#7ec8e3');
                     gradient.addColorStop(1, '#00cc66');
                     ctx.fillStyle = gradient;
                 } else {
