--- a/index.html
+++ b/index.html
@@ -18,14 +18,54 @@
 
         body {
             font-family: 'Courier Prime', monospace;
-            background: #0a0a0a;
-            color: #00ff41;
+            background: linear-gradient(135deg, #1a0a1a 0%, #0a0a0a 50%, #0a1a1a 100%);
+            background-attachment: fixed;
+            color: #7ec8e3;
             overflow-x: hidden;
             overflow-y: auto;
             line-height: 1.8;
             min-height: 100vh;
             padding: 20px;
             position: relative;
+        }
+
+        /* Starry sky background */
+        .stars {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 0;
+            overflow: hidden;
+        }
+
+        .star {
+            position: absolute;
+            background: #fff;
+            border-radius: 50%;
+            animation: twinkle 3s ease-in-out infinite;
+        }
+
+        .star.green {
+            background: #7ec8e3;
+            box-shadow: 0 0 6px #7ec8e3;
+        }
+
+        .star.cyan {
+            background: #00ffff;
+            box-shadow: 0 0 6px #00ffff;
+        }
+
+        .star.red {
+            background: #ff0000;
+            box-shadow: 0 0 6px #ff0000;
+        }
+
+        @keyframes twinkle {
+            0%, 100% { opacity: 0.3; transform: scale(1); }
+            50% { opacity: 1; transform: scale(1.2); }
         }
 
         body::before {
@@ -80,7 +120,7 @@
             bottom: 0;
             background:
                 radial-gradient(circle at 20% 50%, rgba(255, 0, 0, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(0, 255, 65, 0.05) 0%, transparent 50%);
+                radial-gradient(circle at 80% 80%, rgba(126, 200, 227, 0.05) 0%, transparent 50%);
             pointer-events: none;
             animation: dreamShift 8s ease-in-out infinite;
         }
@@ -94,7 +134,7 @@
             font-size: 3em;
             color: #ff0000;
             margin-bottom: 15px;
-            text-shadow: 0 0 30px rgba(255, 0, 0, 0.8), 0 0 60px rgba(0, 255, 65, 0.3);
+            text-shadow: 0 0 30px rgba(255, 0, 0, 0.8), 0 0 60px rgba(126, 200, 227, 0.3);
             letter-spacing: 3px;
             animation: titleGlitch 0.4s ease-in-out infinite;
             font-weight: bold;
@@ -104,7 +144,7 @@
 
         @keyframes titleGlitch {
             0% { transform: translate(0, 0); color: #ff0000; }
-            20% { transform: translate(-2px, 2px); color: #00ff41; }
+            20% { transform: translate(-2px, 2px); color: #7ec8e3; }
             40% { transform: translate(2px, -2px); color: #ff0000; }
             60% { transform: translate(-1px, 1px); color: #00ffff; }
             80% { transform: translate(1px, -1px); color: #ff0000; }
@@ -123,14 +163,14 @@
 
         .refresh-btn {
             background: rgba(255, 0, 0, 0.7);
-            color: #00ff41;
-            border: 2px solid #00ff41;
+            color: #7ec8e3;
+            border: 2px solid #7ec8e3;
             padding: 12px 24px;
             font-family: 'Courier Prime', monospace;
             font-size: 0.9em;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 0 20px rgba(255, 0, 0, 0.5), inset 0 0 10px rgba(0, 255, 65, 0.2);
+            box-shadow: 0 0 20px rgba(255, 0, 0, 0.5), inset 0 0 10px rgba(126, 200, 227, 0.2);
             font-weight: bold;
             letter-spacing: 2px;
             text-transform: uppercase;
@@ -142,7 +182,7 @@
         .refresh-btn:hover {
             background: rgba(255, 0, 0, 1);
             transform: skew(-5deg);
-            box-shadow: 0 0 30px rgba(255, 0, 0, 0.8), inset 0 0 20px rgba(0, 255, 65, 0.4);
+            box-shadow: 0 0 30px rgba(255, 0, 0, 0.8), inset 0 0 20px rgba(126, 200, 227, 0.4);
         }
 
         .projects-grid {
@@ -172,7 +212,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(0, 255, 65, 0.2), transparent);
+            background: linear-gradient(90deg, transparent, rgba(126, 200, 227, 0.2), transparent);
             animation: shimmer 3s infinite;
         }
 
@@ -182,16 +222,16 @@
         }
 
         .project-card:hover {
-            background: rgba(0, 255, 65, 0.1);
-            box-shadow: 0 0 30px rgba(0, 255, 65, 0.4);
+            background: rgba(126, 200, 227, 0.1);
+            box-shadow: 0 0 30px rgba(126, 200, 227, 0.4);
             transform: translateY(-10px);
-            border-color: #00ff41;
+            border-color: #7ec8e3;
         }
 
         .project-card.add-project {
             opacity: 0.7;
             border-style: dashed;
-            border-color: #00ff41;
+            border-color: #7ec8e3;
         }
 
         .project-card.add-project:hover {
@@ -202,7 +242,7 @@
             font-size: 3.5em;
             text-align: center;
             margin-bottom: 15px;
-            filter: drop-shadow(0 0 10px rgba(0, 255, 65, 0.5));
+            filter: drop-shadow(0 0 10px rgba(126, 200, 227, 0.5));
         }
 
         .project-title {
@@ -219,7 +259,7 @@
 
         .project-description {
             font-size: 0.85em;
-            color: #00ff41;
+            color: #7ec8e3;
             line-height: 1.6;
             text-align: center;
             opacity: 0.9;
@@ -238,10 +278,10 @@
         }
 
         footer a {
-            color: #00ff41;
+            color: #7ec8e3;
             text-decoration: none;
             transition: all 0.3s ease;
-            text-shadow: 0 0 5px #00ff41;
+            text-shadow: 0 0 5px #7ec8e3;
         }
 
         footer a:hover {
@@ -250,10 +290,10 @@
         }
 
         footer code {
-            background: rgba(0, 255, 65, 0.1);
+            background: rgba(126, 200, 227, 0.1);
             padding: 3px 8px;
-            border: 1px solid #00ff41;
-            color: #00ff41;
+            border: 1px solid #7ec8e3;
+            color: #7ec8e3;
         }
 
         /* TABLET MEDIA QUERY - 768px and below */
@@ -401,6 +441,7 @@
     </style>
 </head>
 <body>
+    <div class="stars" id="stars"></div>
     <div class="container">
         <header>
             <h1>BOT SPORTELLO'S<br>ARCADE</h1>
@@ -484,6 +525,39 @@
 
         // Load projects on page load
         loadProjects();
+
+        // Generate starry sky background
+        function createStars() {
+            const starsContainer = document.getElementById('stars');
+            const colors = ['', 'green', 'cyan', 'red'];
+
+            for (let i = 0; i < 150; i++) {
+                const star = document.createElement('div');
+                star.className = 'star';
+
+                // Random color (mostly white, some colored)
+                if (Math.random() > 0.7) {
+                    star.classList.add(colors[Math.floor(Math.random() * colors.length)]);
+                }
+
+                // Random size (1-3px)
+                const size = Math.random() * 2 + 1;
+                star.style.width = size + 'px';
+                star.style.height = size + 'px';
+
+                // Random position
+                star.style.left = Math.random() * 100 + '%';
+                star.style.top = Math.random() * 100 + '%';
+
+                // Random animation delay for staggered twinkling
+                star.style.animationDelay = Math.random() * 3 + 's';
+                star.style.animationDuration = (Math.random() * 2 + 2) + 's';
+
+                starsContainer.appendChild(star);
+            }
+        }
+
+        createStars();
     </script>
 </body>
 </html>
