--- a/src/amtrak-journey.html
+++ b/src/amtrak-journey.html
@@ -36,7 +36,7 @@
         /* Train Track */
         .train-track {
             background: rgba(0, 0, 0, 0.4);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 20px 15px;
             margin-bottom: 20px;
             overflow-x: auto;
@@ -68,14 +68,14 @@
             height: 20px;
             border-radius: 50%;
             background: #333;
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             margin-bottom: 8px;
             transition: all 0.3s ease;
         }
 
         .stop-dot.visited {
-            background: #00ff41;
-            box-shadow: 0 0 10px rgba(0, 255, 65, 0.5);
+            background: #7ec8e3;
+            box-shadow: 0 0 10px rgba(126, 200, 227, 0.5);
         }
 
         .stop-dot.current {
@@ -87,7 +87,7 @@
 
         .stop-label {
             font-size: 0.65em;
-            color: #00ff41;
+            color: #7ec8e3;
             text-align: center;
             line-height: 1.3;
             max-width: 70px;
@@ -96,7 +96,7 @@
 
         .track-line {
             height: 4px;
-            background: linear-gradient(90deg, #00ff41, #ff0000);
+            background: linear-gradient(90deg, #7ec8e3, #ff0000);
             margin: -30px 30px 10px;
             position: relative;
             min-width: 440px;
@@ -131,8 +131,8 @@
         }
 
         .fun-fact-box {
-            background: rgba(0, 255, 65, 0.1);
-            border-left: 4px solid #00ff41;
+            background: rgba(126, 200, 227, 0.1);
+            border-left: 4px solid #7ec8e3;
             padding: 15px;
             text-align: left;
             margin-top: 15px;
@@ -153,7 +153,7 @@
 
         .stat-item {
             background: rgba(0, 0, 0, 0.4);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 15px;
             text-align: center;
         }
@@ -167,7 +167,7 @@
 
         .stat-item .label {
             font-size: 0.75em;
-            color: #00ff41;
+            color: #7ec8e3;
             text-transform: uppercase;
         }
 
@@ -190,7 +190,7 @@
 
         /* Quiz */
         .quiz-question {
-            color: #00ff41;
+            color: #7ec8e3;
             font-size: 1.1em;
             margin-bottom: 15px;
         }
@@ -203,8 +203,8 @@
 
         .quiz-btn {
             background: rgba(0, 0, 0, 0.6);
-            color: #00ff41;
-            border: 2px solid #00ff41;
+            color: #7ec8e3;
+            border: 2px solid #7ec8e3;
             padding: 15px;
             cursor: pointer;
             font-family: 'Courier Prime', monospace;
@@ -214,13 +214,13 @@
         }
 
         .quiz-btn:hover {
-            background: rgba(0, 255, 65, 0.2);
+            background: rgba(126, 200, 227, 0.2);
             border-color: #00ffff;
         }
 
         .quiz-btn.correct {
-            background: rgba(0, 255, 65, 0.5);
-            border-color: #00ff41;
+            background: rgba(126, 200, 227, 0.5);
+            border-color: #7ec8e3;
         }
 
         .quiz-btn.incorrect {
@@ -245,7 +245,7 @@
         .memory-card {
             aspect-ratio: 1;
             background: linear-gradient(135deg, #ff0000, #cc0000);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             cursor: pointer;
             font-size: 2em;
             display: flex;
@@ -267,9 +267,9 @@
         }
 
         .memory-card.matched {
-            background: rgba(0, 255, 65, 0.3);
-            color: #00ff41;
-            border-color: #00ff41;
+            background: rgba(126, 200, 227, 0.3);
+            color: #7ec8e3;
+            border-color: #7ec8e3;
         }
 
         /* Messages */
@@ -285,9 +285,9 @@
         }
 
         .game-message.success {
-            background: rgba(0, 255, 65, 0.2);
-            border: 2px solid #00ff41;
-            color: #00ff41;
+            background: rgba(126, 200, 227, 0.2);
+            border: 2px solid #7ec8e3;
+            color: #7ec8e3;
         }
 
         .game-message.error {
@@ -342,11 +342,11 @@
 
         .modal-content {
             background: #0a0a0a;
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             padding: 30px;
             text-align: center;
             max-width: 400px;
-            box-shadow: 0 0 40px rgba(0, 255, 65, 0.4);
+            box-shadow: 0 0 40px rgba(126, 200, 227, 0.4);
         }
 
         .modal-content h2 {
@@ -355,7 +355,7 @@
         }
 
         .modal-stats {
-            background: rgba(0, 255, 65, 0.1);
+            background: rgba(126, 200, 227, 0.1);
             padding: 15px;
             margin: 20px 0;
             text-align: left;
