--- a/src/bushwick.html
+++ b/src/bushwick.html
@@ -16,9 +16,9 @@
         #map {
             width: 100%;
             height: 500px;
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             margin: 20px 0;
-            box-shadow: 0 0 30px rgba(0, 255, 65, 0.4);
+            box-shadow: 0 0 30px rgba(126, 200, 227, 0.4);
         }
 
         .controls {
@@ -28,22 +28,22 @@
 
         .info-box {
             background: rgba(0, 0, 0, 0.6);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 15px;
             margin: 15px 0;
             font-size: 0.9em;
             line-height: 1.8;
-            color: #00ff41;
+            color: #7ec8e3;
         }
 
         .code-block {
             background: rgba(0, 0, 0, 0.6);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 15px;
             margin: 15px 0;
             font-size: 0.85em;
             overflow-x: auto;
-            color: #00ff41;
+            color: #7ec8e3;
         }
 
         .status {
@@ -51,7 +51,7 @@
             font-size: 0.9em;
             padding: 10px;
             background: rgba(0, 0, 0, 0.6);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             margin: 10px 0;
             color: #00ffff;
         }
