--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             background: #0a0a0a;
-            color: #00ff41;
+            color: #7ec8e3;
             font-family: 'Courier Prime', monospace;
             padding: 20px;
             min-height: 100vh;
@@ -49,10 +49,10 @@
             box-shadow: 0 4px 6px rgba(0,0,0,0.3);
         }
         .project-card:hover {
-            border-color: #00ff41;
-            box-shadow: 0 0 20px rgba(0, 255, 65, 0.3);
+            border-color: #7ec8e3;
+            box-shadow: 0 0 20px rgba(126, 200, 227, 0.3);
             transform: translateY(-5px);
-            background: rgba(0, 255, 65, 0.1);
+            background: rgba(126, 200, 227, 0.1);
         }
         .project-card h3 {
             font-size: 0.9em;
@@ -63,18 +63,18 @@
         }
         .project-card p {
             font-size: 0.6em;
-            color: #00ff41;
+            color: #7ec8e3;
             margin-bottom: 15px;
             line-height: 1.6;
         }
         .project-link {
             display: inline-block;
             background: rgba(255, 0, 0, 0.7);
-            color: #00ff41;
+            color: #7ec8e3;
             padding: 10px 18px;
             text-decoration: none;
             font-size: 0.65em;
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             transition: all 0.2s ease;
             min-height: 44px;
             display: flex;
