--- a/src/noodle_inventory.html
+++ b/src/noodle_inventory.html
@@ -15,7 +15,7 @@
         body {
             background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
             font-family: 'Orbitron', sans-serif;
-            color: #00ff41;
+            color: #7ec8e3;
             min-height: 100vh;
             overflow-x: auto;
             position: relative;
@@ -98,7 +98,7 @@
             font-family: 'Courier Prime', monospace;
             font-size: 48px;
             margin-bottom: 10px;
-            color: #00ff41;
+            color: #7ec8e3;
             letter-spacing: 3px;
         }
 
@@ -117,7 +117,7 @@
 
         .panel {
             background: rgba(0, 0, 0, 0.7);
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             border-radius: 10px;
             padding: 30px;
             box-shadow: 0 0 30px rgba(0, 255, 136, 0.3), inset 0 0 20px rgba(0, 255, 136, 0.1);
@@ -163,7 +163,7 @@
             display: block;
             margin-bottom: 8px;
             font-size: 12px;
-            color: #00ff41;
+            color: #7ec8e3;
             text-transform: uppercase;
             letter-spacing: 1px;
             font-weight: 700;
@@ -174,8 +174,8 @@
             width: 100%;
             padding: 12px;
             background: rgba(0, 255, 136, 0.1);
-            border: 2px solid #00ff41;
-            color: #00ff41;
+            border: 2px solid #7ec8e3;
+            color: #7ec8e3;
             border-radius: 5px;
             font-family: 'Orbitron', sans-serif;
             font-size: 12px;
@@ -204,9 +204,9 @@
         button {
             flex: 1;
             padding: 12px 20px;
-            background: linear-gradient(135deg, #00ff41 0%, #00cc6f 100%);
+            background: linear-gradient(135deg, #7ec8e3 0%, #5ba8c7 100%);
             color: #1a1a2e;
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             border-radius: 5px;
             font-family: 'Orbitron', sans-serif;
             font-size: 12px;
@@ -269,7 +269,7 @@
 
         .noodle-item {
             background: rgba(0, 255, 136, 0.05);
-            border-left: 4px solid #00ff41;
+            border-left: 4px solid #7ec8e3;
             padding: 15px;
             margin-bottom: 15px;
             border-radius: 5px;
@@ -333,9 +333,9 @@
             padding: 5px 10px;
             border-radius: 3px;
             font-size: 12px;
-            color: #00ff41;
+            color: #7ec8e3;
             font-weight: 700;
-            border: 1px solid #00ff41;
+            border: 1px solid #7ec8e3;
         }
 
         .noodle-details {
@@ -356,7 +356,7 @@
         }
 
         .detail-label {
-            color: #00ff41;
+            color: #7ec8e3;
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -397,8 +397,8 @@
 
         .status-fresh {
             background: rgba(0, 255, 136, 0.3);
-            color: #00ff41;
-            border: 1px solid #00ff41;
+            color: #7ec8e3;
+            border: 1px solid #7ec8e3;
         }
 
         .status-expiring {
@@ -446,7 +446,7 @@
         .stat-value {
             font-family: 'Courier Prime', monospace;
             font-size: 32px;
-            color: #00ff41;
+            color: #7ec8e3;
             text-shadow: 0 0 15px rgba(0, 255, 136, 0.8);
             margin-bottom: 10px;
             position: relative;
@@ -485,7 +485,7 @@
             position: fixed;
             top: 100px;
             right: 20px;
-            background: linear-gradient(135deg, #00ff41 0%, #00cc6f 100%);
+            background: linear-gradient(135deg, #7ec8e3 0%, #5ba8c7 100%);
             color: #1a1a2e;
             padding: 15px 25px;
             border-radius: 5px;
@@ -542,8 +542,8 @@
         .filter-btn {
             padding: 8px 15px;
             background: rgba(0, 255, 136, 0.1);
-            border: 2px solid #00ff41;
-            color: #00ff41;
+            border: 2px solid #7ec8e3;
+            color: #7ec8e3;
             border-radius: 5px;
             cursor: pointer;
             font-family: 'Orbitron', sans-serif;
@@ -557,7 +557,7 @@
 
         .filter-btn:hover,
         .filter-btn.active {
-            background: linear-gradient(135deg, #00ff41 0%, #00cc6f 100%);
+            background: linear-gradient(135deg, #7ec8e3 0%, #5ba8c7 100%);
             color: #1a1a2e;
             box-shadow: 0 0 15px rgba(0, 255, 136, 0.6);
         }
@@ -603,7 +603,7 @@
 
             .panel {
                 padding: 20px;
-                border: 2px solid #00ff41;
+                border: 2px solid #7ec8e3;
             }
 
             .panel-title {
@@ -729,7 +729,7 @@
 
             .panel {
                 padding: 15px;
-                border: 2px solid #00ff41;
+                border: 2px solid #7ec8e3;
                 border-radius: 8px;
             }
 
@@ -798,7 +798,7 @@
             .noodle-item {
                 padding: 12px;
                 margin-bottom: 12px;
-                border-left: 3px solid #00ff41;
+                border-left: 3px solid #7ec8e3;
             }
 
             .noodle-header {
@@ -1022,7 +1022,7 @@
                 <div class="panel-title">🎮 QUICK STATS 🎮</div>
                 <div style="position: relative; z-index: 1;">
                     <div style="margin-bottom: 20px; padding: 15px; background: rgba(0, 255, 136, 0.05); border-radius: 5px; border: 1px solid rgba(0, 255, 136, 0.3);">
-                        <div style="color: #00ff41; font-size: 12px; margin-bottom: 8px; font-weight: 700; text-transform: uppercase;">INVENTORY STATUS</div>
+                        <div style="color: #7ec8e3; font-size: 12px; margin-bottom: 8px; font-weight: 700; text-transform: uppercase;">INVENTORY STATUS</div>
                         <div id="inventoryStatus" style="font-size: 13px; line-height: 1.8;">
                             <div style="color: rgba(0, 255, 136, 0.7);">Loading inventory...</div>
                         </div>
