--- a/src/rat_bushwick.html
+++ b/src/rat_bushwick.html
@@ -15,10 +15,10 @@
         body {
             font-family: 'VT323', monospace;
             background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
-            color: #00ff41;
+            color: #7ec8e3;
             overflow-x: hidden;
             min-height: 100vh;
-            text-shadow: 0 0 10px rgba(0, 255, 65, 0.5);
+            text-shadow: 0 0 10px rgba(126, 200, 227, 0.5);
         }
 
         .scanlines {
@@ -41,14 +41,14 @@
         header {
             text-align: center;
             padding: 40px 20px;
-            border-bottom: 3px solid #00ff41;
-            box-shadow: 0 0 20px rgba(0, 255, 65, 0.3);
+            border-bottom: 3px solid #7ec8e3;
+            box-shadow: 0 0 20px rgba(126, 200, 227, 0.3);
             animation: glitch 3s infinite;
         }
 
         @keyframes glitch {
-            0%, 100% { text-shadow: 0 0 10px rgba(0, 255, 65, 0.5); }
-            50% { text-shadow: 0 0 20px rgba(255, 0, 127, 0.5), 0 0 10px rgba(0, 255, 65, 0.3); }
+            0%, 100% { text-shadow: 0 0 10px rgba(126, 200, 227, 0.5); }
+            50% { text-shadow: 0 0 20px rgba(255, 0, 127, 0.5), 0 0 10px rgba(126, 200, 227, 0.3); }
         }
 
         h1 {
@@ -97,18 +97,18 @@
 
         .menu-item {
             background: linear-gradient(135deg, #0f3460 0%, #16213e 100%);
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 20px;
             cursor: pointer;
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
-            box-shadow: 0 0 10px rgba(0, 255, 65, 0.2);
+            box-shadow: 0 0 10px rgba(126, 200, 227, 0.2);
         }
 
         .menu-item:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 30px rgba(0, 255, 65, 0.6);
+            box-shadow: 0 0 30px rgba(126, 200, 227, 0.6);
             border-color: #ff006e;
         }
 
@@ -147,13 +147,13 @@
 
         .ascii-art {
             background: #000;
-            border: 1px solid #00ff41;
+            border: 1px solid #7ec8e3;
             padding: 10px;
             margin: 15px 0;
             font-size: 0.7em;
             overflow-x: auto;
             white-space: pre;
-            color: #00ff41;
+            color: #7ec8e3;
             line-height: 1.2;
         }
 
@@ -171,7 +171,7 @@
         .btn {
             background: #ff006e;
             color: #000;
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 10px 20px;
             font-family: 'Courier Prime', monospace;
             font-size: 0.8em;
@@ -183,8 +183,8 @@
         }
 
         .btn:hover {
-            background: #00ff41;
-            box-shadow: 0 0 20px rgba(0, 255, 65, 0.8);
+            background: #7ec8e3;
+            box-shadow: 0 0 20px rgba(126, 200, 227, 0.8);
             transform: scale(1.1);
         }
 
@@ -208,10 +208,10 @@
             background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
             margin: 5% auto;
             padding: 30px;
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             width: 90%;
             max-width: 600px;
-            box-shadow: 0 0 40px rgba(0, 255, 65, 0.5);
+            box-shadow: 0 0 40px rgba(126, 200, 227, 0.5);
             animation: slideIn 0.3s ease;
         }
 
@@ -230,8 +230,8 @@
         }
 
         .close:hover {
-            color: #00ff41;
-            text-shadow: 0 0 10px rgba(0, 255, 65, 0.8);
+            color: #7ec8e3;
+            text-shadow: 0 0 10px rgba(126, 200, 227, 0.8);
         }
 
         .modal h2 {
@@ -243,13 +243,13 @@
 
         .modal-ascii {
             background: #000;
-            border: 1px solid #00ff41;
+            border: 1px solid #7ec8e3;
             padding: 15px;
             margin: 20px 0;
             font-size: 0.65em;
             overflow-x: auto;
             white-space: pre;
-            color: #00ff41;
+            color: #7ec8e3;
             line-height: 1.1;
         }
 
@@ -258,7 +258,7 @@
             color: #000;
             padding: 15px;
             margin: 15px 0;
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             font-weight: bold;
             animation: pulse 0.5s ease;
         }
@@ -277,10 +277,10 @@
 
         .stat-box {
             background: #0f3460;
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 15px;
             text-align: center;
-            box-shadow: 0 0 10px rgba(0, 255, 65, 0.2);
+            box-shadow: 0 0 10px rgba(126, 200, 227, 0.2);
         }
 
         .stat-box .label {
@@ -291,7 +291,7 @@
 
         .stat-box .value {
             font-size: 1.8em;
-            color: #00ff41;
+            color: #7ec8e3;
         }
 
         .rat-pixel {
@@ -310,7 +310,7 @@
 
         .mini-game {
             background: #000;
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             padding: 20px;
             margin: 20px 0;
             text-align: center;
@@ -326,7 +326,7 @@
             max-width: 400px;
             height: 300px;
             background: #1a1a2e;
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             position: relative;
             overflow: hidden;
             margin: 15px 0;
@@ -373,7 +373,7 @@
 
         .leaderboard {
             background: #0f3460;
-            border: 2px solid #00ff41;
+            border: 2px solid #7ec8e3;
             padding: 20px;
             margin: 30px 0;
         }
@@ -388,7 +388,7 @@
             display: flex;
             justify-content: space-between;
             padding: 8px 0;
-            border-bottom: 1px solid rgba(0, 255, 65, 0.2);
+            border-bottom: 1px solid rgba(126, 200, 227, 0.2);
             align-items: center;
         }
 
@@ -410,7 +410,7 @@
         .footer {
             text-align: center;
             padding: 40px 20px;
-            border-top: 2px solid #00ff41;
+            border-top: 2px solid #7ec8e3;
             margin-top: 60px;
             font-size: 0.9em;
         }
@@ -442,8 +442,8 @@
             height: 60px;
             font-size: 24px;
             background: rgba(255, 0, 110, 0.8);
-            color: #00ff41;
-            border: 3px solid #00ff41;
+            color: #7ec8e3;
+            border: 3px solid #7ec8e3;
             cursor: pointer;
             user-select: none;
             -webkit-user-select: none;
@@ -451,7 +451,7 @@
         }
 
         .game-control-btn:active {
-            background: #00ff41;
+            background: #7ec8e3;
             color: #000;
         }
 
@@ -478,7 +478,7 @@
 
 </head>
 <body>
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(255,0,0,0.9);color:#00ff41;padding:12px 24px;border:2px solid #00ff41;box-shadow:0 0 20px rgba(0,255,65,0.5);font-family:'VT323',monospace;font-size:1.2em;">HOME</a>
+    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(255,0,0,0.9);color:#7ec8e3;padding:12px 24px;border:2px solid #7ec8e3;box-shadow:0 0 20px rgba(0,255,65,0.5);font-family:'VT323',monospace;font-size:1.2em;">HOME</a>
     
     <div class="scanlines"></div>
 
@@ -652,7 +652,7 @@
             <div class="game-stats" style="display: flex; gap: 20px; justify-content: center; margin: 10px 0;">
                 <span style="color: #ffbe0b;">Score: <span id="gameScore">0</span></span>
                 <span style="color: #ff006e;">Lives: <span id="gameLives">3</span></span>
-                <span style="color: #00ff41;">Level: <span id="gameLevel">1</span></span>
+                <span style="color: #7ec8e3;">Level: <span id="gameLevel">1</span></span>
             </div>
             <button class="btn" onclick="startGame()">START GAME</button>
             <!-- Mobile Controls -->
@@ -1109,7 +1109,7 @@
             gameCtx.fillRect(0, 0, canvasWidth, canvasHeight);
 
             // Draw grid
-            gameCtx.strokeStyle = 'rgba(0, 255, 65, 0.1)';
+            gameCtx.strokeStyle = 'rgba(126, 200, 227, 0.1)';
             gameCtx.lineWidth = 1;
             for (let i = 0; i < canvasWidth; i += 20) {
                 gameCtx.beginPath();
@@ -1265,7 +1265,7 @@
             }
 
             // Draw player (rat) with speed boost effect
-            const ratColor = speedBoostTimer > 0 ? '#00ff41' : '#ff006e';
+            const ratColor = speedBoostTimer > 0 ? '#7ec8e3' : '#ff006e';
             gameCtx.fillStyle = ratColor;
 
             // Body
@@ -1317,7 +1317,7 @@
             gameCtx.textAlign = 'center';
             gameCtx.fillText('GAME OVER', canvasWidth / 2, canvasHeight / 2 - 30);
 
-            gameCtx.fillStyle = '#00ff41';
+            gameCtx.fillStyle = '#7ec8e3';
             gameCtx.font = '18px VT323';
             gameCtx.fillText(`Final Score: ${gameScore}`, canvasWidth / 2, canvasHeight / 2);
             gameCtx.fillText(`Level Reached: ${gameLevel}`, canvasWidth / 2, canvasHeight / 2 + 25);
