--- a/src/sudoku.html
+++ b/src/sudoku.html
@@ -24,7 +24,7 @@
         }
         .sudoku-grid {
             background: rgba(26, 0, 0, 0.4);
-            border: 3px solid #00ff41;
+            border: 3px solid #7ec8e3;
             padding: 10px;
             display: grid;
             grid-template-columns: repeat(9, 1fr);
@@ -32,27 +32,27 @@
             gap: 2px;
             max-width: 450px;
             aspect-ratio: 1;
-            box-shadow: 0 0 30px rgba(0, 255, 65, 0.4);
+            box-shadow: 0 0 30px rgba(126, 200, 227, 0.4);
         }
         .cell {
             background: #0a0a0a;
-            border: 1px solid #00ff41;
+            border: 1px solid #7ec8e3;
             display: flex;
             align-items: center;
             justify-content: center;
             font-family: 'Courier Prime', monospace;
             font-size: 16px;
-            color: #00ff41;
+            color: #7ec8e3;
             cursor: pointer;
             transition: background 0.2s;
             aspect-ratio: 1;
             min-height: 40px;
         }
         .cell:hover {
-            background: rgba(0, 255, 65, 0.2);
+            background: rgba(126, 200, 227, 0.2);
         }
         .cell.selected {
-            background: #00ff41;
+            background: #7ec8e3;
             color: #0a0a0a;
         }
         .cell.given {
@@ -66,7 +66,7 @@
         }
         .cell.conflict {
             background: #ff0000;
-            color: #00ff41;
+            color: #7ec8e3;
         }
         .number-pad {
             display: grid;
@@ -76,8 +76,8 @@
         }
         .number-btn {
             background: rgba(0, 0, 0, 0.6);
-            color: #00ff41;
-            border: 2px solid #00ff41;
+            color: #7ec8e3;
+            border: 2px solid #7ec8e3;
             padding: 15px;
             font-family: 'Courier Prime', monospace;
             font-size: 14px;
@@ -86,7 +86,7 @@
             min-height: 44px;
         }
         .number-btn:hover {
-            background: rgba(0, 255, 65, 0.3);
+            background: rgba(126, 200, 227, 0.3);
             transform: scale(1.05);
         }
         .controls {
@@ -97,8 +97,8 @@
         }
         .control-btn {
             background: rgba(255, 0, 0, 0.7);
-            color: #00ff41;
-            border: 2px solid #00ff41;
+            color: #7ec8e3;
+            border: 2px solid #7ec8e3;
             padding: 10px 20px;
             font-family: 'Courier Prime', monospace;
             font-size: 12px;
@@ -112,7 +112,7 @@
         }
         .info {
             text-align: center;
-            color: #00ff41;
+            color: #7ec8e3;
             font-family: 'Courier Prime', monospace;
             font-size: 12px;
         }
