--- a/src/bills_qb_game.html
+++ b/src/bills_qb_game.html
@@ -6,10 +6,15 @@
     <title>Bills QB Game</title>
     <link rel="stylesheet" href="page-theme.css">
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             padding-top: 80px;
             background: #0a0a0a;
-            overflow-x: auto;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .game-wrapper {
@@ -18,15 +23,20 @@
             align-items: center;
             gap: 20px;
             padding: 20px;
+            max-width: 100%;
+            width: 100%;
+            overflow-x: hidden;
         }
 
         canvas {
             border: 3px solid #00ffff;
             background: linear-gradient(to bottom, #1a3a52 0%, #0a1f2e 100%);
-            max-width: 100%;
+            max-width: 100vw;
+            width: 100%;
             height: auto;
             display: block;
             margin: 0 auto;
+            box-sizing: border-box;
         }
 
         .control-panel {
@@ -38,6 +48,7 @@
             padding: 20px;
             display: grid;
             gap: 15px;
+            box-sizing: border-box;
         }
 
         .slider-group {
@@ -129,6 +140,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 10px;
+            box-sizing: border-box;
         }
 
         .stat-box {
@@ -181,17 +193,35 @@
         }
 
         @media (max-width: 768px) {
+            body {
+                padding-top: 80px;
+            }
+
+            .game-wrapper {
+                padding: 10px;
+                gap: 15px;
+            }
+
             .mobile-controls {
                 display: grid;
             }
 
             canvas {
-                max-width: 100%;
+                max-width: 100vw;
+                width: 100%;
                 height: auto;
             }
 
             .control-panel {
-                padding: 15px;
+                width: 90%;
+                max-width: 100%;
+                padding: 10px;
+            }
+
+            .stats {
+                width: 90%;
+                max-width: 100%;
+                padding: 10px;
             }
         }
 
